Change jvm options